[package]
name = "maze_wasm"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
maze_lib = { path = "../maze_lib" }
wasm-bindgen = "0.2"
rand = { version = "0.7", features = ["wasm-bindgen"] }
rand_xorshift = "0.2"
console_error_panic_hook = "0.1"
fxhash = "0.2"
